@@ -1,3 +1,8 @@
+   * Fixed bug in TGDB. TGDB would not query GDB for breakpoints on startup.
+   However, the user can set breakpoints in there .gdbinit. TGDB now gets all
+   breakpoints on startup. This fixes a bug in CGDB. The breakpoint will now
+   be highlighted.
+   
    * Fixed CGDB bug. When searching for text, CGDB would search for the next
    occurence of the string from where it last found an occurence, rather than
    where the users cursor is.
