@@ -1,3 +1,7 @@
+09/24/2003 Bob Rossi <bob@brasko.net>
+
+    * NEWS: TGDB no checks breakpoints on startup. 
+
 09/23/2003 Bob Rossi <bob@brasko.net>
 
     * NEWS: Fixed searching bug for CGDB.
